// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseButtonVue > should render properly > Icon and Disabled 1`] = `
"<button type=\\"button\\" disabled=\\"\\" class=\\"py-2 px-4 h-10 bg-purple-600 hover:bg-purple-700 focus:ring-purple-500 focus:ring-offset-purple-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 rounded-lg\\">
  <nuxticon class=\\"spinner\\" name=\\"spinner\\"></nuxticon>
</button>"
`;

exports[`BaseButtonVue > should render properly > Icon and not Disabled 1`] = `
"<button type=\\"button\\" class=\\"py-2 px-4 h-10 bg-purple-600 hover:bg-purple-700 focus:ring-purple-500 focus:ring-offset-purple-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 rounded-lg\\">
  <nuxticon class=\\"spinner\\" name=\\"spinner\\"></nuxticon>
</button>"
`;

exports[`BaseButtonVue > should render properly > Text and Disabled 1`] = `"<button type=\\"button\\" disabled=\\"\\" class=\\"py-2 px-4 h-10 bg-purple-600 hover:bg-purple-700 focus:ring-purple-500 focus:ring-offset-purple-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 rounded-lg\\">Login</button>"`;

exports[`BaseButtonVue > should render properly > Text and not Disabled 1`] = `"<button type=\\"button\\" class=\\"py-2 px-4 h-10 bg-purple-600 hover:bg-purple-700 focus:ring-purple-500 focus:ring-offset-purple-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 rounded-lg\\">Login</button>"`;
